added tablayout,fragments,bottom sheet, some fixed bugs

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,19 +5,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_history"
             android:title="@string/history_service" />
-        <!--<item-->
-            <!--android:id="@+id/nav_gallery"-->
-            <!--android:icon="@drawable/ic_menu_gallery"-->
-            <!--android:title="Настройки" />-->
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_news"
+            android:icon="@drawable/ic_news"
+            android:title="Наши новости" />
+        <item
+            android:id="@+id/nav_help"
             android:icon="@drawable/ic_customer_service"
             android:title="@string/support_service" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_help"
             android:title="@string/settings" />
     </group>
