--- a/app/src/main/res/layout-v21/content_main.xml
+++ b/app/src/main/res/layout-v21/content_main.xml
@@ -2,7 +2,6 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:shimmer="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -11,6 +10,8 @@
         tools:context=".ui.MainActivity"
         tools:showIn="@layout/app_bar_main"
        >
+
+
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
@@ -23,6 +24,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tabIndicatorColor="#ffffff"
             android:elevation="5dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextColor="@color/tab_gray">
 
@@ -49,5 +52,8 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+
+
     </LinearLayout>
 
