--- a/app/src/main/res/layout/activity_certain.xml
+++ b/app/src/main/res/layout/activity_certain.xml
@@ -14,6 +14,7 @@
         android:layout_height="56dp"
         android:background="?attr/colorPrimary"
         android:elevation="5dp"
+        app:layout_scrollFlags="scroll|enterAlways"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
