--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -11,13 +11,13 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:innerRadius="0dp"
     android:orientation="horizontal"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="2dp">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="96dp"
         android:layout_margin="4dp"
 
         android:orientation="horizontal">
@@ -31,27 +31,52 @@
             android:visibility="gone" />
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="134dp"
-            android:layout_height="86dp"
+            android:layout_width="133dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView11"
-                android:layout_width="72dp"
+                android:layout_width="70dp"
                 android:layout_height="84dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="2dp"
-                app:civ_border_color="@color/background"
-                app:civ_border_width="2dp"
+                android:translationZ="2dp"
+                app:civ_border_color="@color/splash_bk_alternative"
+                app:civ_border_width="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:translationZ="2dp"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.0" />
+
+            <View
+                android:id="@+id/view_rating_service_single"
+                android:layout_width="39dp"
+                android:layout_height="17dp"
+
+                android:layout_marginEnd="17dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/rating_background"
+                android:elevation="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="16dp"
+                android:layout_height="15dp"
+                android:translationZ="5dp"
+                app:layout_constraintEnd_toEndOf="@+id/view_rating_service_single"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/view_rating_service_single"
+                app:layout_constraintTop_toTopOf="@+id/view_rating_service_single"
+                app:srcCompat="@drawable/ic_star_rating" />
+
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView3"
@@ -60,17 +85,24 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="52dp"
                 android:layout_marginBottom="2dp"
-                app:civ_border_color="@color/background"
-                app:civ_border_width="2dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageView11"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
+            <TextView
+                android:id="@+id/text_rating"
+                android:layout_width="21dp"
+                android:layout_height="16dp"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="@+id/view_rating_service_single"
+                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                app:layout_constraintTop_toTopOf="@+id/view_rating_service_single"
+                app:layout_constraintVertical_bias="0.0" />
 
 
         </android.support.constraint.ConstraintLayout>
-
 
 
         <LinearLayout
@@ -81,6 +113,7 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="175dp"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:text="TextView" />
@@ -89,21 +122,21 @@
                 android:id="@+id/textView6"
                 android:layout_width="219dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="168dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="TextView" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="TextView" />
 
         </LinearLayout>
@@ -112,13 +145,13 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="90dp">
+        android:layout_height="35dp"
+        android:layout_marginTop="100dp">
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
+            android:layout_width="15dp"
+            android:layout_height="14dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="2dp"
@@ -132,56 +165,36 @@
             android:id="@+id/textView12"
             android:layout_width="55dp"
             android:layout_height="14dp"
-            android:layout_marginStart="7dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="1dp"
             android:text="5 мин "
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView5"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.588" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="24dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="7dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView13"
-            app:layout_constraintStart_toEndOf="@+id/textView12"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_star" />
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="20dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="12dp"
-            android:text="4,7"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintVertical_bias="0.533" />
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="47dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="76dp"
+            android:layout_width="36dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="136dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView13"
+            app:layout_constraintStart_toEndOf="@+id/textView12"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.454"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_beenhereicon" />
 
         <TextView
             android:id="@+id/txt_used_amount"
-            android:layout_width="40dp"
-            android:layout_height="21dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@+id/imageView6"
+            android:layout_width="25dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/like_button"
+            app:layout_constraintStart_toEndOf="@+id/imageView6"
             app:layout_constraintTop_toTopOf="parent" />
 
         <!--<ImageView-->
@@ -196,18 +209,18 @@
 
         <com.like.LikeButton
             android:id="@+id/like_button"
-            android:layout_width="68dp"
-            android:layout_height="42dp"
+            android:layout_width="54dp"
+            android:layout_height="24dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
-            app:icon_size="22dp"
+            app:icon_size="18dp"
             app:icon_type="heart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="0.272"
             app:like_drawable="@drawable/heart_on"
-            app:unlike_drawable="@drawable/ic_heart_like" />
+            app:unlike_drawable="@drawable/ic_favorite_gray" />
 
     </android.support.constraint.ConstraintLayout>
 
