--- a/app/src/main/res/layout/single_data.xml
+++ b/app/src/main/res/layout/single_data.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/single_container"
     android:fillViewport="true"
+    android:fitsSystemWindows="true"
     tools:context=".ui.SingleActivity">
 
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,6 +21,7 @@
             android:layout_height="50dp"
             android:background="?attr/colorPrimary"
             android:elevation="5dp"
+            app:layout_scrollFlags="scroll|enterAlways"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,182 +31,59 @@
 
             <com.like.LikeButton
                 android:id="@+id/like_button"
-                android:layout_width="68dp"
+                android:layout_width="60dp"
                 android:layout_height="42dp"
                 android:layout_marginLeft="200dp"
                 android:clickable="true"
-                app:icon_size="22dp"
+                app:icon_size="20dp"
                 app:icon_type="heart"
                 app:like_drawable="@drawable/heart_on"
-                app:unlike_drawable="@drawable/ic_heart_like" />
+                app:unlike_drawable="@drawable/ic_favorite" />
 
             <ImageButton
                 android:id="@+id/map_start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="270dp"
-                android:layout_marginLeft="270dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:srcCompat="@drawable/ic_share" />
 
         </android.support.v7.widget.Toolbar>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager_slider"
-            android:layout_width="match_parent"
-            android:layout_height="172dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </android.support.v4.view.ViewPager>
-
         <android.support.design.widget.TabLayout
-            android:id="@+id/tabDots"
-            android:layout_width="67dp"
-            android:layout_height="26dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="172dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="84dp"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager_slider"
-            app:tabBackground="@drawable/tab_selectot"
-            app:tabGravity="center"
-            app:tabIndicatorHeight="0dp" />
-
-
-        <ProgressBar
-            android:id="@+id/loadingSingle"
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="308dp"
-            android:foregroundGravity="center"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView"
-            android:layout_width="72dp"
-            android:layout_height="66dp"
-            android:layout_marginTop="112dp"
-            android:layout_marginEnd="16dp"
-            android:elevation="7dp"
-            android:src="@drawable/avatar_lady"
-            app:civ_border_color="@color/splash_bk_alternative"
-            app:civ_border_width="3dp"
+            android:id="@+id/tablayout_single"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/viewPager_slider" />
-
-        <View
-            android:id="@+id/imageView10"
-            android:layout_width="9dp"
-            android:layout_height="9dp"
-            android:layout_marginStart="200dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabIndicatorColor="@color/splash_bk_alternative"
             android:elevation="5dp"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/round_view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/splash_bk_alternative"
+            app:tabTextColor="#3D3A3A">
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="14dp"
-            android:layout_height="12dp"
-            android:layout_marginStart="4dp"
-
-            android:layout_marginTop="4dp"
-            android:translationZ="2dp"
-            app:layout_constraintStart_toStartOf="@+id/view_rating_service_single"
-            app:layout_constraintTop_toTopOf="@+id/view_rating_service_single"
-            app:srcCompat="@drawable/ic_star" />
-
-        <View
-            android:id="@+id/view_rating_service_single"
-            android:layout_width="43dp"
-            android:layout_height="21dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="32dp"
-
-            android:background="@drawable/rating_background"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/circleImageView" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="395dp"
-            android:layout_height="514dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="8dp"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager_slider">
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="match_parent"
+            <android.support.design.widget.TabItem
+                android:id="@+id/tab_info"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:textSize="20sp" />
+                android:text="@string/main_info" />
 
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="match_parent"
+            <android.support.design.widget.TabItem
+                android:id="@+id/tab_feedback"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:text="@string/feedback" />
 
-            <TextView
-                android:id="@+id/textView17"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+        </android.support.design.widget.TabLayout>
+    </android.support.design.widget.AppBarLayout>
 
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewSingle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/rating_input"
-            android:layout_width="21dp"
-            android:layout_height="14dp"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="int"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/view_rating_service_single"
-            app:layout_constraintEnd_toEndOf="@+id/view_rating_service_single" />
-
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+    <include layout="@layout/bottom_sheet_layout"/>
+</android.support.design.widget.CoordinatorLayout>
