--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/splash_bk_main"
-        android:startColor="@color/splash_bk_alternative"
+
+    android:endColor="#F5F2F2"
+    android:startColor="#5C5858"
         android:angle="-135" />
 </shape>
+
+    <!--android:endColor="@color/splash_bk_main"-->
+    <!--android:startColor="@color/splash_bk_alternative"-->
