--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,119 +1,192 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootFrame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/container"
-    android:background="@drawable/bg_login"
-    android:orientation="vertical"
-    tools:context=".auth.LoginActivity">
-
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="89dp"
-        app:srcCompat="@drawable/time_white" />
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="66dp">
-
-        <ProgressBar
-            android:id="@+id/loader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="140dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.445"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/form_container"
         android:layout_width="match_parent"
-        android:layout_height="407dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:id="@+id/llphone"
+        android:orientation="vertical"
+        android:paddingTop="80dp">
 
         <TextView
-            style="@style/Base.TextAppearance.AppCompat.Headline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/login"
-            android:textColor="@color/tab_gray" />
-
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_email"
-            style="@style/TextAppearance.AppCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email">
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:hint="sdfsdfdsf"
+            android:text="Заполните следующие поля"
+            android:textColor="#262626"
+            android:textColorHint="#DADBDF"
+            android:textSize="18sp" />
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/et_bg"
-                android:drawablePadding="10dp"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_password"
+        <EditText
+            android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password"
-            app:passwordToggleEnabled="true">
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:cursorVisible="true"
+            android:hint="Enter your password"
+            android:textColorHint="#DADBDF"
+            android:textSize="18sp" />
+        <EditText
+            android:id="@+id/etSurname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:cursorVisible="true"
+            android:hint="Enter your password"
+            android:textColorHint="#DADBDF"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
+    <com.github.jorgecastilloprz.FABProgressCircle
+        android:id="@+id/fabProgressCircle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:arcColor="#0F9398">
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:srcCompat="@drawable/ic_arrow_right" />
+
+    </com.github.jorgecastilloprz.FABProgressCircle>
+
+    <ImageView
+        android:id="@+id/ivback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15sp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="15dp"
+        app:srcCompat="@drawable/ic_arrow_back"
+        android:transitionName="@string/transition_arrow" />
+
+</FrameLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:id="@+id/container"-->
+    <!--android:orientation="vertical"-->
+    <!--tools:context=".auth.LoginActivity">-->
+
+
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView2"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="34dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--app:srcCompat="@drawable/time_green" />-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="66dp"-->
+        <!--tools:layout_editor_absoluteY="21dp">-->
+
+        <!--<ProgressBar-->
+            <!--android:id="@+id/loader"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:layout_marginStart="35dp"-->
+            <!--android:layout_marginTop="140dp"-->
+            <!--android:visibility="invisible"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintHorizontal_bias="0.445"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+    <!--</android.support.constraint.ConstraintLayout>-->
+
+    <!--<LinearLayout-->
+        <!--android:id="@+id/form_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="407dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<TextView-->
+            <!--style="@style/Base.TextAppearance.AppCompat.Headline"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:text="Заполните следующие поля"-->
+            <!--/>-->
+
+
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/til_name"-->
+            <!--style="@style/TextAppearance.AppCompat"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Имя">-->
 
             <!--<android.support.design.widget.TextInputEditText-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="40dp"-->
                 <!--android:layout_marginLeft="10dp"-->
                 <!--android:layout_marginRight="10dp"-->
+                <!--android:background="@drawable/input_bg"-->
+                <!--android:drawablePadding="10dp"-->
+                <!--android:imeOptions="actionNext"-->
+                <!--android:inputType="textEmailAddress" />-->
 
-                <!--android:background="@drawable/et_bg"-->
-                <!--android:drawableStart="@drawable/ic_locker"-->
-                <!--android:drawableLeft="@drawable/ic_locker"-->
+        <!--</android.support.design.widget.TextInputLayout>-->
+
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:id="@+id/til_surname"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="Фамилия">-->
+
+            <!--<android.support.design.widget.TextInputEditText-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:background="@drawable/input_bg"-->
                 <!--android:drawablePadding="10dp"-->
                 <!--android:imeOptions="actionDone"-->
-                <!--android:inputType="textPassword"-->
                 <!--android:maxLines="1" />-->
 
 
-        </android.support.design.widget.TextInputLayout>
+        <!--</android.support.design.widget.TextInputLayout>-->
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="224dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/et_bg"
-            android:text="@string/login"
-            android:textColor="@color/tab_gray" />
+        <!--<Button-->
+            <!--android:id="@+id/btn_done"-->
+            <!--android:layout_width="224dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--android:background="@drawable/et_bg"-->
+            <!--android:text="Готово"-->
+            <!--android:textColor="@color/tab_gray" />-->
 
-        <TextView
-            android:id="@+id/go_to_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/noAccount"
-            android:textColor="@color/tab_gray"
-            android:textSize="18sp" />
+        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+            <!--&lt;!&ndash;android:id="@+id/go_to_register"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_gravity="end"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_marginBottom="8dp"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:text="@string/noAccount"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:textColor="@color/tab_gray"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:textSize="18sp" />&ndash;&gt;-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
-</LinearLayout>
+<!--</LinearLayout>-->
