--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -8,75 +8,62 @@
 
     <TextView
         android:id="@+id/statusText"
-        android:layout_width="wrap_content"
+        android:layout_width="253dp"
         android:layout_height="33dp"
-        android:layout_marginTop="80dp"
-        android:text="Введите номер телефона"
-        android:textSize="20sp"
+        android:layout_marginTop="144dp"
+        android:gravity="center"
+        android:textSize="13sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/phoneText"
-        android:layout_width="348dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:digits="+() 0123456789+"
-        android:maxLength="15"
-        android:ems="10"
-        android:hint="+7 777 77 77 77"
-        android:inputType="phone"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusText" />
 
     <Button
-        android:id="@+id/sendButton"
-        android:layout_width="323dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="48dp"
-        android:onClick="sendCode"
-        android:text="Send Code"
+        android:id="@+id/resendButton"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="208dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/warning_bg"
+        android:onClick="resendCode"
+        android:text="Переотправить"
+        android:textColor="#fff"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statusText" />
 
+    <EditText
+        android:id="@+id/codeText"
+        android:layout_width="276dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="12dp"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="код "
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/statusText"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneText" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <!--<Button-->
-        <!--android:id="@+id/resendButton"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:onClick="resendCode"-->
-        <!--android:text="Resend Code"-->
-        <!--app:layout_constraintBottom_toTopOf="@+id/codeText"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/sendButton" />-->
-
-    <!--<EditText-->
-        <!--android:id="@+id/codeText"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="42dp"-->
-        <!--android:ems="10"-->
-        <!--android:hint="Code"-->
-        <!--android:inputType="number"-->
-        <!--app:layout_constraintBottom_toTopOf="@+id/verifyButton"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/resendButton" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/verifyButton"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:onClick="verifyCode"-->
-        <!--android:text="Verify Code"-->
-        <!--app:layout_constraintBottom_toTopOf="@+id/signoutButton"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/codeText" />-->
+    <Button
+        android:id="@+id/verifyButton"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="212dp"
+        android:background="@drawable/et_bg"
+        android:onClick="verifyCode"
+        android:text="Потвредить"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statusText" />
 
     <!--<Button-->
         <!--android:id="@+id/signoutButton"-->
