--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -4,7 +4,7 @@
         <shape>
 
             <gradient android:startColor="@color/splash_bk_alternative" android:endColor="@color/splash_bk_alternative" />
-            <stroke android:color="#2088F5" android:width="2dp"/>
+            <stroke android:color="#FFC107" android:width="2dp"/>
         </shape>
     </item>
 </selector>
