--- a/app/src/main/res/layout-v21/content_main.xml
+++ b/app/src/main/res/layout-v21/content_main.xml
@@ -10,9 +10,6 @@
         tools:context=".ui.MainActivity"
         tools:showIn="@layout/app_bar_main"
        >
-
-
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
@@ -40,20 +37,18 @@
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
                 <!--android:text="@string/free" />-->
+            <!--<android.support.design.widget.TabItem-->
+                <!--android:id="@+id/all_tab"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="@string/all" />-->
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/all_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/all" />
         </android.support.design.widget.TabLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-
 
     </LinearLayout>
 
