--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="fitXY"
-            android:src="@drawable/time_green"
+            android:src="@drawable/main_logo"
             tools:ignore="Suspicious0dp" />
 
         <LinearLayout
@@ -31,42 +31,45 @@
                 android:id="@+id/tvMoving"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:paddingLeft="20dp"
-                android:text="Войти с помощью номера"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:hint="sdfsdfdsf"
+                android:text="Зарабатывайте эконмя время"
                 android:textColor="#262626"
-                android:textSize="22sp" />
+                android:textColorHint="#DADBDF"
+                android:textSize="18sp"
+                android:transitionName="@string/transition_tvPhoneNo" />
 
 
             <LinearLayout
                 android:id="@+id/llInfo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingLeft="20dp">
 
+
                 <ImageView
                     android:id="@+id/ivFlag"
-                    android:layout_width="42dp"
-                    android:layout_height="35dp"
+                    android:layout_width="40dp"
+                    android:layout_height="32dp"
                     android:layout_marginEnd="10dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/kaz_flag"
-                    android:transitionName="transition_ivFlag" />
+                    android:transitionName="@string/transition_ivFlag" />
 
                 <TextView
                     android:id="@+id/tvCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:gravity="center"
                     android:text="+7"
                     android:textColor="#0E0E0E"
-                    android:textSize="16sp"
-                    android:transitionName="transition_tvCode" />
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:transitionName="@string/transition_tvCode" />
 
                 <TextView
                     android:id="@+id/tvPhoneNo"
@@ -77,6 +80,7 @@
                     android:textColorHint="#DADBDF"
                     android:textSize="20sp"
                     android:transitionName="transition_tvPhoneNo" />
+
 
             </LinearLayout>
 
@@ -97,10 +101,10 @@
         android:id="@+id/ivback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:padding="15dp"
-        app:srcCompat="@drawable/ic_arrow_back"
-        android:transitionName="transition_arrow" />
+        android:transitionName="transition_arrow"
+        app:srcCompat="@drawable/ic_arrow_back" />
 
 </FrameLayout>
 
