--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="33dp"
         android:layout_marginTop="144dp"
         android:gravity="center"
-        android:textSize="13sp"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:id="@+id/resendButton"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="208dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="24dp"
         android:layout_marginRight="32dp"
         android:background="@drawable/warning_bg"
@@ -36,13 +36,14 @@
     <EditText
         android:id="@+id/codeText"
         android:layout_width="276dp"
-        android:layout_height="39dp"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="12dp"
         android:ems="10"
         android:gravity="center"
-        android:hint="код "
+        android:hint="0:0:0:0:0:0"
         android:inputType="number"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/statusText"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -56,8 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="212dp"
+        android:layout_marginEnd="28dp"
         android:background="@drawable/et_bg"
+        android:drawableEnd="@drawable/ic_done"
         android:onClick="verifyCode"
         android:text="Потвредить"
         android:textColor="#fff"
