--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -39,7 +39,7 @@
         tools:ignore="UselessParent">
 
         <Button
-            android:id="@+id/button_order"
+            android:id="@+id/button_order_accept"
             android:layout_width="382dp"
             android:layout_height="60dp"
             android:layout_weight="1"
