--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="70dp"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     android:background="@drawable/ripple_background"
@@ -17,7 +17,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="76dp"
+        android:layout_height="65dp"
         android:layout_margin="4dp"
 
         android:orientation="horizontal">
@@ -31,8 +31,8 @@
             android:visibility="gone" />
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="100dp"
-            android:layout_height="75dp"
+            android:layout_width="83dp"
+            android:layout_height="65dp"
             android:orientation="horizontal">
 
             <View
@@ -40,7 +40,8 @@
                 android:layout_width="39dp"
                 android:layout_height="17dp"
 
-                android:layout_marginEnd="28dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="12dp"
                 android:background="@drawable/rating_background"
                 android:elevation="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -60,17 +61,17 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imageView3"
-                android:layout_width="75dp"
-                android:layout_height="71dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="20dp"
 
                 android:layout_marginBottom="2dp"
                 android:background="@drawable/ic_user"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.205" />
 
             <TextView
                 android:id="@+id/text_rating"
@@ -88,7 +89,7 @@
 
         <LinearLayout
             android:layout_width="288dp"
-            android:layout_height="76dp"
+            android:layout_height="65dp"
             android:orientation="vertical">
 
             <TextView
