--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -46,10 +46,10 @@
                 android:id="@+id/profile"
                 android:icon="@drawable/ic_account"
                 android:title="Личный кабинет" />
-            <!--<item-->
-                <!--android:id="@+id/logout_menu"-->
-                <!--android:icon="@drawable/ic_logout"-->
-                <!--android:title="Выйти" />-->
+            <item
+                android:id="@+id/logout_menu"
+                android:icon="@drawable/ic_logout"
+                android:title="Выйти" />
         </menu>
     </item>
 
