--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#0D7D1E</color>
     <color name="colorAccent">#32D25F</color>
 
-    <color name="colorError">#c61d1d</color>
+    <color name="colorError">#F54B4B</color>
     
     <color name="tab_gray">#eae8e8</color>
     <color name="placeholder_bg">#D6D4D4</color>
