--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -29,8 +29,8 @@
             android:layout_height="50dp"
             android:text="Войти как специалист"
             android:layout_gravity="bottom"
-            android:textColor="#fff"
-            android:background="@drawable/btn_bg"
+            android:textColor="#ffff"
+            android:background="@drawable/btn_business"
             />
     </android.support.design.widget.NavigationView>
 
