--- a/app/src/main/res/drawable/rating_background.xml
+++ b/app/src/main/res/drawable/rating_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#E7E4E4">
+    android:color="#FFFFFF">
     <item android:id="@+id/mask">
         <shape android:shape="rectangle">
             <solid android:color="#33BEB2" />
@@ -12,8 +12,8 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="90"
-                android:endColor="#EFF0F1"
-                android:startColor="#D0D2D6"
+                android:endColor="#FFFFFF"
+                android:startColor="#FFFFFF"
                 android:type="linear" />
             <corners android:radius="20dp" />
         </shape>
