--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,13 +16,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
-            android:hint="sdfsdfdsf"
-            android:text="Заполните следующие поля"
+            android:layout_marginBottom="10dp"
+            android:text="Заполните следующие поля : "
             android:textColor="#262626"
             android:textColorHint="#DADBDF"
-            android:textSize="18sp" />
+            android:textSize="19sp" />
 
         <EditText
             android:id="@+id/etName"
@@ -31,7 +30,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:cursorVisible="true"
-            android:hint="Enter your password"
+            android:hint="Введтите логин"
             android:textColorHint="#DADBDF"
             android:textSize="18sp" />
         <EditText
@@ -41,7 +40,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:cursorVisible="true"
-            android:hint="Enter your password"
+            android:hint="Введите ваше Имя"
             android:textColorHint="#DADBDF"
             android:textSize="18sp" />
 
