--- a/app/src/main/res/layout/activity_waiting.xml
+++ b/app/src/main/res/layout/activity_waiting.xml
@@ -45,7 +45,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="158dp"
         android:layout_marginTop="283dp"
-        android:layout_marginEnd="155dp" />
+        android:layout_marginEnd="155dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView8"
@@ -97,8 +98,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
-        android:layout_marginTop="456dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginTop="455dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginBottom="20dp"
         app:arcColor="#2AD108">
 
