--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -14,59 +14,31 @@
             android:id="@+id/viewPager_slider"
             android:layout_width="417dp"
             android:layout_height="204dp"
-            android:layout_marginTop="85dp"
-            app:fillColor="#69D147"
+            android:layout_marginTop="78dp"
+            app:indicatorGravity="center|bottom"
+
+            app:fillColor="#56A23D"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:indicatorVisibility="visible"
             app:pageColor="#00000000"
             app:radius="6dp"
             app:slideInterval="3000"
-            app:strokeColor="#898B86"
+            app:strokeColor="#D2D6CD"
             app:strokeWidth="1dp" />
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabDots"
-            android:layout_width="67dp"
-            android:layout_height="26dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="172dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="84dp"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager_slider"
-            app:layout_constraintVertical_bias="1.0"
-            app:tabBackground="@drawable/tab_selectot"
-            app:tabGravity="center"
-            app:tabIndicatorHeight="0dp" />
-
-
-        <ProgressBar
-            android:id="@+id/loadingSingle"
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
-            android:layout_width="54dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="308dp"
-            android:foregroundGravity="center"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circleImageView"
             android:layout_width="72dp"
             android:layout_height="66dp"
-            android:layout_marginTop="112dp"
+            android:layout_marginTop="148dp"
             android:layout_marginEnd="16dp"
-            android:elevation="5dp"
+            android:elevation="7dp"
+
             android:src="@drawable/avatar_lady"
-            app:civ_border_color="@color/splash_bk_alternative"
+            app:civ_border_color="@color/colorAccent"
             app:civ_border_width="3dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/viewPager_slider" />
@@ -77,6 +49,7 @@
             android:layout_height="9dp"
             android:layout_marginStart="200dp"
             android:elevation="5dp"
+
             android:layout_marginTop="12dp"
             android:background="@drawable/round_view"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +61,8 @@
             android:layout_height="18dp"
 
             android:layout_marginStart="8dp"
-            android:translationZ="2dp"
+            android:translationZ="5dp"
+
             app:layout_constraintBottom_toBottomOf="@+id/view_rating_service_single"
             app:layout_constraintEnd_toStartOf="@+id/rating_input"
             app:layout_constraintHorizontal_bias="1.0"
@@ -101,6 +75,7 @@
             android:layout_height="21dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="30dp"
+            android:translationZ="4dp"
 
             android:background="@drawable/rating_background"
             app:layout_constraintEnd_toEndOf="parent"
@@ -109,11 +84,11 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="395dp"
-            android:layout_height="514dp"
+            android:layout_height="25dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,55 +96,97 @@
 
             <TextView
                 android:id="@+id/textView15"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="....."
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="...." />
-
-            <TextView
-                android:id="@+id/textView17"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="...." />
-
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="...." />
-
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="...." />
-
-            <TextView
-                android:id="@+id/textView21"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="...." />
         </LinearLayout>
+
+        <View
+            android:id="@+id/view5"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+
+            android:background="@color/tab_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view5">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view6"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:background="@color/tab_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view7"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:background="@color/tab_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
         <TextView
             android:id="@+id/rating_input"
             android:layout_width="25dp"
             android:layout_height="14dp"
             android:layout_marginBottom="4dp"
-            android:gravity="center"
+            android:gravity="center|center_horizontal"
             android:text=".."
+            android:translationZ="5dp"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/view_rating_service_single"
             app:layout_constraintEnd_toEndOf="@+id/view_rating_service_single"
