--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,18 +17,10 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="85dp"
+        android:layout_height="90dp"
         android:layout_margin="4dp"
-
         android:orientation="horizontal">
 
-
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="89dp"
-            android:layout_height="84dp"
-            android:layout_gravity="center_vertical"
-            android:visibility="gone" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="133dp"
@@ -44,7 +36,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="2dp"
                 android:translationZ="2dp"
-                app:civ_border_color="@color/splash_bk_alternative"
+                app:civ_border_color="@color/colorAccent"
                 app:civ_border_width="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +49,6 @@
                 android:id="@+id/view_rating_service_single"
                 android:layout_width="39dp"
                 android:layout_height="17dp"
-
                 android:layout_marginEnd="17dp"
                 android:layout_marginBottom="4dp"
                 android:background="@drawable/rating_background"
@@ -67,11 +58,12 @@
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="16dp"
-                android:layout_height="15dp"
+                android:layout_width="12dp"
+                android:layout_height="10dp"
+                android:layout_marginTop="4dp"
                 android:translationZ="5dp"
                 app:layout_constraintEnd_toEndOf="@+id/view_rating_service_single"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.074"
                 app:layout_constraintStart_toStartOf="@+id/view_rating_service_single"
                 app:layout_constraintTop_toTopOf="@+id/view_rating_service_single"
                 app:srcCompat="@drawable/ic_star_rating" />
@@ -91,14 +83,16 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/text_rating"
-                android:layout_width="21dp"
-                android:layout_height="16dp"
+                android:id="@+id/rating"
+                android:layout_width="22dp"
+                android:layout_height="11dp"
+                android:gravity="center_horizontal"
                 android:text="TextView"
+                android:textSize="10sp"
+                android:translationZ="5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/view_rating_service_single"
                 app:layout_constraintStart_toEndOf="@+id/imageView5"
-                app:layout_constraintTop_toTopOf="@+id/view_rating_service_single"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="@+id/view_rating_service_single" />
 
 
         </android.support.constraint.ConstraintLayout>
@@ -110,26 +104,52 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView4"
                 android:layout_width="175dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Маникюр"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="176dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:drawableEnd="@drawable/online_dot"
                 android:text="TextView"
+                android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="200dp"
+                android:layout_height="0dp"
+                android:layout_marginLeft="5dp"
+                android:background="#262627" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="219dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="11sp" />
+
+            <View
+                android:id="@+id/view3"
+                android:layout_width="200dp"
+                android:layout_height="0dp"
+                android:layout_marginLeft="5dp"
+                android:background="#262627" />
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="168dp"
-                android:layout_height="wrap_content"
+                android:layout_width="180dp"
+                android:layout_height="25dp"
                 android:layout_marginLeft="5dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="10sp" />
 
         </LinearLayout>
 
@@ -137,13 +157,13 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginTop="90dp">
+        android:layout_height="20dp"
+        android:layout_marginTop="95dp">
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="13dp"
-            android:layout_height="12dp"
+            android:layout_width="12dp"
+            android:layout_height="11dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="2dp"
