--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -23,18 +23,19 @@
         app:srcCompat="@drawable/ic_user" />
 
     <TextView
+        android:id="@+id/nav_username1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#070707" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_username"
         android:layout_width="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:text="@string/nav_header_subtitle"
+        android:textColor="@color/colorPrimaryDark" />
 
 </LinearLayout>
