--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">#0d7e1e</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/dark_blue</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -13,12 +15,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
+        <item name="colorControlNormal">@color/colorPrimary</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">#0d7e1e</item>
+        <item name="colorPrimary">#161515</item>
         <item name="colorPrimaryDark">@color/dark_blue</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorSecondary">#161515</item>
 
         <item name="colorAccent">@color/colorAccent</item>
     </style>
